# plco-analysis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.config  README.md  environment-ldsc.yaml  environment.yaml  package-lock.json  package.json
1KG_files/: Makefile
1KG_files/testing/: Makefile.am  checksum.test  configure.ac
ancestry/: Makefile
ancestry/testing/: Makefile.am  ancestry-discordances.test  ancestry-groups.test  configure.ac
annotations/: freq.AFR.tsv.bz2  freq.AMR.tsv.bz2  freq.EAS.tsv.bz2  freq.EUR.tsv.bz2  freq.SAS.tsv.bz2  freq.prefix.tsv.bz2  rsid_linker.tsv.bz2
bgen/: Makefile  Makefile.bgen_format
bgen/testing/: Makefile.am  configure.ac  sample_na.test  subject_nr.test
cleaned-chips-by-ancestry/: Makefile  Makefile.include
cleaned-chips-by-ancestry/testing/: Makefile.am  configure.ac  (+1 more)
config/: BMI.config  BMI.config.yaml  BMI.female.config  BMI.female.config.yaml  BMI.male.config  BMI.male.config.yaml  CA125.config  CA125.config.yaml  CA125.female.config  CA125.female.config.yaml  CA125.male.config  CA125.male.config.yaml  Makefile  adenoma_stat.config.yaml  adenoma_stat.female.config.yaml  adenoma_stat.male.config.yaml  advanced_adenoma_stat.config.yaml  advanced_adenoma_stat.female.config.yaml  advanced_adenoma_stat.male.config.yaml  balding_trend.config.yaml  breast_cancer.config  breast_cancer.config.yaml  caffeine.config  caffeine.config.yaml  caffeine.female.config  caffeine.female.config.yaml  caffeine.male.config  caffeine.male.config.yaml  carbohydrate.config  carbohydrate.config.yaml  carbohydrate.female.config  carbohydrate.female.config.yaml  carbohydrate.male.config  carbohydrate.male.config.yaml  cig_stat.config.yaml  cig_stat.female.config.yaml  cig_stat.male.config.yaml  cll.config  cll.config.yaml  cll.female.config  (+194 more)
docs/: Advanced Dev Notes.rst  Advanced Development Notes.rst  Globus Distribution.rst  Installation.rst  Meta-Analysis.rst  Methods Summary.rst  Postprocessing.rst  Preprocessing.rst  Primary Analysis.rst  Trait Configuration.rst  User Vignette.rst  conf.py  index.rst
flat-dosages/: Makefile
inst/: WORDLIST
known-signals/: DT_CAFFEINE_DHQ.txt  DT_CARB_DHQ.txt  bmi.signals.hg19.tsv  bq_bmi_curr_co.txt  bq_cig_stat_o.txt  bq_height_f_co.txt  cll.signals.hg19.tsv  colorectal.signals.hg19.tsv  first_ca125_level.txt  first_psa_level.txt  generate_variant_lists.bash  height.signals.hg19.tsv  j_breast_cancer.txt  j_cll.txt  j_colo_cancer.txt  j_endo_cancer.txt  j_lung_cancer.txt  j_mela_cancer.txt  j_osumm_cancer.txt  j_panc_cancer.txt  j_pros_cancer.txt  prostate.euro.signals.hg19.tsv
ldsc/: AFRAMR_samples.tsv  AFR_samples.tsv  AMR_samples.tsv  EAS_samples.tsv  Makefile  SAS_samples.tsv
relatedness/: Makefile
shared-makefiles/: Makefile.boltlmm  Makefile.check  Makefile.compare-bolt-fastgwa  Makefile.fastgwa  Makefile.fastgwa.grm  Makefile.globus  Makefile.ldscores  Makefile.metal  Makefile.plink  Makefile.plotting  Makefile.saige  Makefile.utilities  included.samples
shared-source/: Makefile  annotate_frequency.cc  annotate_rsids_from_linker.cc  combine_categorical_runs.cc  compare_bolt_fastgwa.R  concatenate_autosome_and_X.R  construct_covariates.bash  construct_model_matrix.R  construct_output_filenames.bash  construct_phenotype.bash  extract_columns.bash  format_globus_prefixes.py  get_config_filename.bash  get_single_yaml_entry.py  lambda-n_plot_launcher.R  manhattan_loci_colored.R  manhattan_loci_colored_launcher.R  merge_files_for_globus.cc  parse_categorical_output.R  plot_xy.R  polmm_round1.R  resolve_bolt_ldscore.bash  saige_round1.R  saige_round2.R  write_config_yaml.R
shared-source/fileinterface/: Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  fileinterface-1.0.pc  fileinterface-1.0.pc.in  temp_config.h.in
shared-source/fileinterface/fileinterface/: fileinterface.h  fileinterface_reader.h  fileinterface_reader_bzip2.cc  fileinterface_reader_bzip2.h  fileinterface_reader_flat.cc  fileinterface_reader_flat.h  fileinterface_reader_gzip.cc  fileinterface_reader_gzip.h  fileinterface_reader_parent.h  fileinterface_writer.h  fileinterface_writer_bzip2.cc  fileinterface_writer_bzip2.h  fileinterface_writer_flat.cc  fileinterface_writer_flat.h  fileinterface_writer_gzip.cc  fileinterface_writer_gzip.h  fileinterface_writer_parent.h  helper.h  plinkbed.cc  plinkbed.h
shared-source/fileinterface/m4/: bzip2.m4
shared-source/qsub_job_monitor/: Makefile  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  qsub_job_monitor-1.0.pc  qsub_job_monitor-1.0.pc.in  temp_config.h.in
shared-source/qsub_job_monitor/m4/: ax_boost_base_fix.m4
shared-source/qsub_job_monitor/qsub_job_monitor/: cargs.cc  cargs.h  main.cc  utilities.cc  utilities.h
(+55 files in other folders)
